<resources>
    <string name="app_name">MyDiary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="name">Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">Sign up</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="email">Email</string>
    <string name="registered_emailid">Please enter your Registered Email</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="logout">Logout</string>

</resources>
