<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="32dp">

        <TextView
            android:id="@+id/textChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:text="Registration"
            android:textSize="14pt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:clickable="true"/>

        <LinearLayout
            android:layout_marginTop="56dp"
            android:layout_below="@id/textChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                />

            <EditText
                android:id="@+id/nameField"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textSize="14sp"
                android:inputType="text"
                />

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                />

            <EditText
                android:id="@+id/usernameField"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textSize="14sp"
                android:inputType="text"
                />

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                />

            <EditText
                android:id="@+id/emailField"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registered_emailid"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                />

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passowrd"
                />

            <EditText
                android:id="@+id/passwordfield"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passowrd"
                android:textSize="14sp"
                android:inputType="textPassword"
                />

            <EditText
                android:id="@+id/passconfirmField"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPassword"
                android:textSize="14sp"
                android:inputType="textPassword"

                />

            <Button
                android:id="@+id/btn_register"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/btn_toLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_user"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:clickable="true"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>