<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">


    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"/>


    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_below="@id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/pink"
            />

        <EditText
            android:id="@+id/nameAcc"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:background="@drawable/edit_field"
            android:hint="..."
            android:textColorHint="@color/pink"
            android:textSize="14sp"
            />

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/pink"
            />

        <EditText
            android:id="@+id/usernameAcc"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_field"
            android:padding="3dp"
            android:textColorHint="@color/pink"
            android:hint="..."
            android:textSize="14sp"

            />

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/pink"
            />

        <EditText
            android:id="@+id/emailAcc"
            android:layout_marginTop="8dp"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_field"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:enabled="false"
            />

        <Button
            android:id="@+id/btn_edit"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_shape"
            android:text="Edit Profile"
            android:textColor="@color/white"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/logout"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_shape"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
    </LinearLayout>


</RelativeLayout>

</ScrollView>